[package]
name = "mainframe"
version = "0.9.0"
edition = "2024"
authors = ["rtldg <rtldg@protonmail.com>"]
license = "WTFPL"
repository = "https://github.com/srcwr/maps-cstrike/tree/master/mainframe"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bzip2 = { version = "0.6" }
clap = { version = "4.5", features = ["derive"] }
compact_str = {version = "0.9.0", features = ["serde"] }
const-hex = "1.14.0"
csv = "1.3.1"
dashmap = { version = "6.1.0", features = ["serde"] }
dunce = "1.0.5"
flate2 = { version = "1.1.1", default-features = false, features = ["zlib-rs"] }
glob = "0.3.2"
html-escape = "0.2.13"
idna_adapter = "=1.0.0" # we can trim down on unicode bullshit with this...
indoc = "2"
itertools = "0.14.0"
jiff = { version = "0.2.8", features = ["serde"] }
md-5 = "0.10.6"
#memmap2 = "0.9.5"
mimalloc = "0.1.46"
libmimalloc-sys = { version = "*", features = ["extended"] }
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.13", features = ["brotli", "gzip", "json", "multipart", "stream"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
rusty-s3 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
serde_with = "3.12"
sha1 = "0.10.6"
thiserror = "2"
thousands = "0.2.0"
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
twilight-gateway = { version = "0.17", features = ["simd-json"] }
vbsp = { git = "https://github.com/srcwr/vbsp.git", rev = "fe421c3e6601caec9c774074d89fa9ab78e3b91c", default-features = false } # a fork to improve some things for us
zip = { version = "8", default-features = false, features = ["lzma"] }
