[package]
name = "fastdl-tun-but-h2"
version = "1.2.3"
edition = "2024"

[profile.release]
lto = true

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
axum = { version = "0.8", features = ["http2", "macros"] }
jiff = "0.2.24"
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "sqlite", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
tokio = { version = "1.52", features = ["full"] }
